@@ -41,3 +41,4 @@ skip = ^DBD::
 Devel::StackTrace = 1.30
 -relationship = recommends
 Pod::Simple = 1.41
+PerlIO::utf8_strict
