@@ -3,6 +3,8 @@ Revision history for Perl extension App::Sqitch
 0.966
      - Fixed the default ordering of changes displayed by the `plan` command.
        They are now ascending by default.
+     - Switched to PerlIO::utf8_strict for fast character encoding and
+       decoding.
 
 0.965  2013-04-23T16:25:59Z
      - Fixed failing test due to line-ending character variations on Windows.
